general improvements on prformance and SEO

--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preload" href="./public/fonts/Belanosima-Regular.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" href="./public/fonts/Belanosima-SemiBold.woff2" type="font/woff2" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo</title>
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description"
+    content="ToDo is a simple and intuitive task management app that helps you stay organized and productive. Create tasks, set due dates, and track your progress with ease. Try ToDo today and take control of your to-do list!">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="task management, productivity, organization, to-do list, reminders">
+  <meta name="author" content="Sergio Mir">
+  <meta name="theme-color" content="#202026">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="icon" type="image/svg+xml" href="/vite.svg">
+  <link rel="preload" href="/fonts/Belanosima-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/Belanosima-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/images/6926528.webp" as="image" type="image/webp" crossorigin="anonymous">
+  <title>ToDo</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
